--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
     "react-foundation": "^0.9.5",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
+    "react-test-renderer": "^16.4.1",
     "redux": "^4.0.0",
     "reselect": "^3.0.1"
   },
