--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "1.1.4",
     "react-test-renderer": "^16.4.1",
     "redux": "^4.0.0",
+    "redux-mock-store": "^1.5.3",
     "reselect": "^3.0.1"
   },
   "scripts": {
